--- a/styles/main.css
+++ b/styles/main.css
@@ -10,6 +10,8 @@ body {
 }
 
 nav {
+    position: relative;
+    z-index: 10;
     display: flex;
     align-items: center;
     justify-content: space-evenly;
@@ -27,7 +29,6 @@ nav {
 
 nav a {
     color: white;
-    text-decoration: none;
     border: none;
     line-height: 34px;
 }
@@ -89,9 +90,43 @@ nav input:focus {
     filter: brightness(1000%);
 }
 
-.banner {
+header {
     position: absolute;
     top: 0;
-    width: 100%;
+    right: auto;
+    left: 50%;
+    padding-top: 100px;
+    padding-bottom: 100px;
+    margin-left: -720px;
+    width: 1440px;
     background: url(https://web.archive.org/web/20140301004302im_/http://images.apple.com/v/home/as/images/your_verse_hero.jpg) 50% 100% no-repeat;
+    background-size: 1440px 1315px;
+    text-align: center;
+}
+
+a {
+    text-decoration: none;
+}
+
+.promos {
+    display: flex;
+    flex-direction: row;
+    position: relative;
+    top: 300px;
+    justify-content: center;
+    align-items: center;
+}
+
+footer {
+    position: absolute;
+    bottom: 10px;
+    width: 100%;
+    text-align: center;
+
+    font-size: 10px;
+    color: grey;
+}
+
+footer div {
+    padding-top: 10px;
 }
